fixing spacing for smaller screens

--- a/src/components/featured/featured.css
+++ b/src/components/featured/featured.css
@@ -8,7 +8,7 @@
 .featured-spacing {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 1rem;
     height: fit-content;
     width: 100%;
     justify-self: center;
@@ -17,4 +17,15 @@
 .project-list {
     justify-content: center;
     align-items: center;
+    width: 100%;
+}
+
+h1.featured-title {
+    text-align: center;
+    font-weight: 700;
+    font-family: 'Archivo Narrow', sans-serif;
+    color: #3658A2;
+    text-transform: uppercase;
+    font-size: clamp(2rem, 5rem, 8rem);
+    line-height: 2rem;
 }
