--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -2,10 +2,10 @@
 .project-card {
     background-color: #FAFAFA;
     border-radius: 1rem;
-    width: clamp(75%, 90%, 95%);
+    width: clamp(75%, 95%, 100%);
     height: fit-content;
-    justify-self: center;
-    margin: 2rem;
+    justify-content: center;
+    margin-bottom: 1rem;
 }
 
 .card-spacing {
@@ -33,7 +33,8 @@
     display: flex;
     flex-direction: column;
     width: 66%;
-    padding: 2rem;
+    padding: 1rem;
+    align-self: center;
 }
 
 .info-row {
@@ -44,7 +45,7 @@
 }
 
 .desc-margin {
-    padding: 1rem;
+    margin-inline: 0.5rem;
 }
 
 h1.project-title {
@@ -53,8 +54,8 @@ h1.project-title {
     font-family: 'Archivo Narrow', sans-serif;
     color: #D23278;
     text-transform: uppercase;
-    font-size: clamp(2rem, 2.5rem, 3rem);
-    line-height: 2.5rem;
+    font-size: clamp(2rem, 2.25rem, 2.5rem);
+    line-height: 2.25rem;
 }
 
 h2.project-dates {
@@ -64,6 +65,7 @@ h2.project-dates {
     font-family: 'Archivo Narrow', sans-serif;
     text-transform: uppercase;
     color: #3658A2;
+    line-height: 2.25rem;
 }
 
 p.project-description {
