--- a/src/components/recentUpdates/recentUpdates.css
+++ b/src/components/recentUpdates/recentUpdates.css
@@ -20,9 +20,20 @@
 .updates-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-self: center;
     flex-wrap: nowrap;
+    width: fit-content;
+    gap: 0.5rem;
+    padding: 0rem;
 }
 
+h1.r-u-title {
+    text-align: center;
+    font-weight: 700;
+    font-family: 'Archivo Narrow', sans-serif;
+    color: #3658A2;
+    text-transform: uppercase;
+    font-size: clamp(2rem, 5rem, 8rem);
+    line-height: 2rem;
+}
 
