--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
     height: fit-content;
     gap: 4rem;
     min-width: 50vw;
-    max-width: 70vw;
+    max-width: 65vw;
     width: contain;
 }
 
